--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>ADA-Unterweisungsprüfung</title>
+		<title>ePortfolio Docker</title>
 
-		<meta name="description" content="Prüfung für ADA">
-		<meta name="author" content="Moritz Gabriel, Simon Brückl, Daniel Betsche">
+		<meta name="description" content="ePortfolio Docker">
+		<meta name="author" content="
+		,Daniel Betsche">
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
