--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
 				
 				<section>
 					<h2>ePortfolio: Docker</h2>
+					<img alt="docker" src="img/docker.png"/>
 					<small>Daniel Betsche</small>
 				</section>
 				
